charts/templates/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mywebserver
  namespace: mynamespace
spec:
  ports:
  - port: 80
    name: web
  selector:
    app: mywebserver
  type: NodePort
