charts/templates/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress
  namespace: mynamespace
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"  
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: mywebserver
          servicePort: 80
